--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+
+
 body
 {
 	padding: 0;
 	margin: 0 ;
-	background-image: url('ronds.jpg');
+	background-image: url('fond.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover ;
 	background-position:center; 
+    text-align: center;
+    font-family:"yes";
 }
 #container
 {
@@ -22,10 +26,11 @@ body
 	padding: 20px;
 	background: #ccc;
 	height:50px;
-	background-image: url('haut.jpg');
+	background-color:bisque;
 	background-repeat: no-repeat;
 	background-size: cover ;
 	background-position:center; 
+    color:blue;
 }
 
 #header h1 { margin: 0; }
@@ -136,8 +141,9 @@ h2,h3
 	font-weight: bold;
 	padding: 20px;
 	height: 1%;
-	background-image: url('bas.jpg');
+	
 	background-repeat: no-repeat;
 	background-size: cover ;
 	background-position:center; 
+    background-color: cadetblue;
 }
